<resources>

    <string name="app_name">Grounds Tour</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">UVA Grounds Tour</string>
    <string name="intro_text">Grounds Tour Tech Demo</string>
    <string name="lat_label">Latitude:</string>
    <string name="long_label">Longitude:</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="GotoMap">Go To Map</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="History">History</string>
    <string name="next_stop">Next Stop:</string>
    <string name="title_activity_choice">Choice</string>
    <string name="use_mock">Pick a mock location.</string>
    <string name="send_mock">Set Mock Location</string>
    <string name="use_normal">Use the standard location.</string>
    <string name="title_activity_mock_coor">Set Mock Coordinates</string>
    <string name="enter_lat">Enter mock latitude.</string>
    <string name="enter_lon">Enter mock longitude.</string>
    <string name="title_activity_mock">MockActivity</string>
    <string name="set_satellite">Satellite</string>
    <string name="set_roadmap">Roadmap</string>
    <string name="nextcoor">Enter Next Coordinate</string>
    <string name="follow">Follow the Arrow!</string>
    <string name="howclose">You are...</string>
    <string name="cold">Cold</string>
    <string name="yourloc">Your Location:</string>
    <string name="dest">Destination:</string>
    <string name="title_activity_next_coor">Enter Next Coordinate</string>
    <string name="update_mock">Update Coordinates</string>
    <string name="title_activity_history_button">History</string>
    <string name="title_activity_display_history">History</string>
    <string name="North">North</string>

</resources>